# X2O-Zynq-software

./: .gitignore  README.md  VCCINT_config.txt  c2c_reset.sh  c2c_reset_bot.sh  c2c_reset_top.sh  c2c_reset_vu13p_bot.sh  c2c_reset_vu13p_top.sh  devmem.sh  devreg.sh  devreg_7.sh  devreg_us.sh  exp_reg_config.sh  exp_reg_config_bot.sh  exp_reg_config_qsfp2.sh  exp_reg_config_qsfp3.sh  exp_reg_config_top.sh  fw_program_bot.sh  fw_program_top.sh  git_tunnel.sh  gtp_reset.sh  mdio_page.sh  mdio_reg.sh  mnt.sh  mnt_us.sh  octopus_errors.txt  octopus_jtag_k7.sh  octopus_jtag_vu13p.sh  octopus_payload_seq.sh  payload_off.sh  payload_on.sh  payload_seq_off_bot.sh  payload_seq_off_qsfp2.sh  payload_seq_off_top.sh  payload_seq_on_bot.sh  payload_seq_on_qsfp2.sh  payload_seq_on_top.sh  payload_sequence_off.sh  payload_sequence_on.sh  pok_change_status_bot.sh  (+15 more)
XAPP1251/: CMakeLists.txt  README.md  xvcserver_uio.c
c2c/: CMakeCache.txt  CMakeLists.txt  Makefile  c2c_memcpy  c2c_memcpy.cpp  c2c_ptr  c2c_ptr.cpp  cmake_install.cmake
c2c_buserr_rework/: CMakeLists.txt  Makefile  c2c_memcpy.cpp  c2c_ptr.cpp  c2c_test.cpp  cmake_build_clean_up.sh
clock/clock_async/: CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  Si5332-GM1-RevD-Registers.h  Si5332-GM1-RevD-Registers.txt  clock_async  clock_async.c  cmake_install.cmake  i2c-chip.c  si5332-120-all-Registers.h  si5332-322.x-all-Registers.h  si5332-gty-156p25-gth-156p25-c2c-250-Registers.h  si5332-gty-156p25-gth-250-Registers.h  toml.c  toml.h
clock/clock_async/CONFIGS/: CONFIG.toml  config_top.toml
clock/clock_async/CONFIGS_7/: config_top.toml
clock/clock_async/CONFIGS_US/: config_top.toml
clock/clock_sync/: CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  Si5345-160p3144_40p08_in_apexsync-Registers.h  Si5345-160p3156_no_ref_apexsync-Registers.h  Si5345-320p6288_40p08_in_apexsync-Registers.h  Si5345-320p632_no_ref_apexsync-Registers.h  clock_sync  clock_sync.c  cmake_install.cmake  i2c-chip.c
clock/clock_sync/CONFIGS/: CONFIG.toml  config_bot.toml  config_top.toml
clock/vu13p/: vu13p_322p265625_noref-Registers.txt  vu13p_322p265625_noref.csv
dbg_bridge/: CMakeCache.txt  Makefile  cmake_install.cmake  xvcserver_uio
eom/cpp/: CMakeLists.txt  README.md  eom.cc  i2c-chip.c  i2c-chip.h  semaphore.h
eom/python/: eyescan_plot.py  generate_all_plots.py  readme.txt
jtag/jtag_decoder/: CMakeLists.txt  README.md  cmake_build_clean_up.sh  dma-proxy-test.c  dma-proxy.h  jtag_decoder.cc  jtag_fw_programmer.cc
jtag/jtag_decoder/decoder/: CMakeLists.txt  README.md  cmake_build_clean_up.sh  jtag_decoder.cc
jtag/jtag_decoder/dma-proxy/: CMakeLists.txt  README.md  cmake_build_clean_up.sh  dma-proxy-test.c  dma-proxy.h  dma_proxy_64.ko  dma_proxy_64_us.ko
jtag/jtag_fw_programmer/: .Makefile.swp  CMakeLists.txt  Makefile  README.md  jtag_fw_programmer.cc  semaphore.c
jtag/xvc/driver/: Makefile  README.md  xilinx_xvc_driver.ko  xilinx_xvc_driver_rev3.ko  xvc_driver.c  xvc_driver_base.c  xvc_user_config.h
jtag/xvc/driver_us/: xilinx_xvc_driver.ko
jtag/xvc/user/: Makefile  README.md  semaphore.c  semaphore.h  verify_xilinx_xvc_driver.c  xvcServer.c  xvcServer_ioctl
jtag/xvc/user_mem/: xvcserver.c
power/: 0.85v_margin_high.sh  0.85v_rd_pwr.sh  tps53681.sh  tps53681_branch.sh  tps53681_config  tps53681_config.cpp  tps53681_script_live.csv
qsfp/: qsfp_cdr_off.sh  qsfp_cdr_on.sh  qsfp_i2c.sh  qsfp_i2c_clear.sh  qsfp_i2c_n.sh  qsfp_i2c_prepare.sh  qsfp_i2c_setall.sh  qsfp_temps.sh
qsfp2/: CMakeLists.txt  Makefile  i2c-chip.c  i2c-chip.h  qsfp_monitor.c  qsfp_pok.c
qsfp2/CONFIGS/: config_qsfp.toml
qsfp3/: CMakeLists.txt  Makefile  i2c-chip.c  i2c-chip.h  qsfp_monitor.c  qsfp_pok.c  semaphore.c  semaphore.h  toml.h
qsfp3/CONFIGS/: config_qsfp.toml
